--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="hero">
       <nav>
-        <img src="./img/logo.png" class="logo" />
+        <img src="img/myimage.jpeg" class="myimage"/>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
